# holocene

./: .gitattributes  .gitignore  .secrets  ARCHITECTURE_AUDIT_2025-11-21.md  CLAUDE.md  README.md  holocene_design.md  pyproject.toml
.claude/: settings.local.json
design/: README.md  SUMMARY.md  librarything_endarthur.json
design/architecture/: balloc_dixie.md  data_sources.md  database_schema.md  holocene_architecture.md  integration_guidelines.md  llm_strategy.md  operating_modes.md  privacy_model.md  remote_cli.md  task_scheduler.md
design/features/: extended_dewey_classification.md  trading_cards.md
design/integrations/: aedb_scavenge.md  future_integrations.md  librarycat.md  mercadolivre_favorites.md  research_mode.md  sensecap_watcher.md  thermal_printing.md
design/security/: automation_boundaries.md  injection_defense.md  quarantine_system.md
docs/: ARCHIVING_ROADMAP.md  DEPLOYMENT.md  ROADMAP.md  SOUL.md  aedb_evaluation.md  archivebox_config_example.yaml  database_current_state.md  infrastructure_naming.md  integration_strategy_framework.md  laney_field_assistant.md  laney_visual_requirements.md  public_apis_evaluation.md  scissors_runner_evaluation.md  self_hosted_read_later_evaluation.md
docs/sessions/: SESSION_2025-11-18_SUMMARY.md
scripts/: bootstrap-holocene.sh  check_dependencies.py  check_usb_config.py  extract_meli_favorites.py  fetch_nanogpt_models.py  generate_laney_chan.py  get_ml_curl_command.py  install_fonts.ps1  mercadolivre_favorites_exporter.user.js  migrate_links_backoff.py  migrate_trust_tiers.py  oauth_callback_server.py  setup-holocene-lxc.sh  setup_laney_sandbox.sh  test_mercadolivre_auth.py  test_ml_auth_no_redirect.py  test_ml_product_page.py  test_ml_token.py  test_vision.py
scripts/podman/: Dockerfile.laney-sandbox  setup_sandbox.sh
src/holocene/: __init__.py
src/holocene/cli/: __init__.py  ask_commands.py  auth_commands.py  config_commands.py  daemon_commands.py  inventory_commands.py  laney_commands.py  main.py  mercadolivre_commands.py  ml_inventory_commands.py  monitor_commands.py  print_commands.py  stats_commands.py
src/holocene/config/: __init__.py  loader.py
src/holocene/core/: __init__.py  aggregator.py  api_client.py  cache.py  categorizer.py  channels.py  embeddings.py  error_handler.py  fuzzy_search.py  holocene_core.py  link_utils.py  models.py  plugin.py  plugin_registry.py  rate_limiter.py  retry_queue.py  sanitizer.py  taxonomy.py
src/holocene/daemon/: __init__.py  api.py  holod.py
src/holocene/daemon/templates/: terminal.html
src/holocene/daemon/webapp/: index.html
src/holocene/data/: inventory_taxonomy.yml
src/holocene/integrations/: __init__.py  apify.py  archivebox.py  bookmarks.py  brave_search.py  calibre.py  git_scanner.py  http_fetcher.py  internet_archive.py  journel.py  local_archive.py  mercadolivre.py  notify_run.py  uptime_kuma.py
src/holocene/integrations/paperang/: __init__.py  client.py  renderer.py  renderer_old.py  spinitex.py
src/holocene/llm/: __init__.py  budget.py  laney_tools.py  nanogpt.py  router.py
src/holocene/plugins/: __init__.py  book_classifier.py  book_enricher.py  email_handler.py  example_plugin.py  link_status_checker.py  proactive_laney.py  task_worker.py  telegram_bot.py
src/holocene/research/: __init__.py  arxiv_client.py  bibtex_importer.py  book_enrichment.py  book_importer.py  crossref_client.py  dewey_classifier.py  extended_dewey.py  internet_archive_client.py  openalex_client.py  orchestrator.py  pdf_handler.py  pdf_metadata_extractor.py  report_generator.py  udc_classifier.py  unpaywall_client.py  wikipedia_client.py
src/holocene/storage/: __init__.py  archiving.py  database.py  migrations.py
tests/: __init__.py  test_api_client.py  test_book_classifier_plugin.py  test_book_enricher_plugin.py  test_cache.py  test_config.py  test_embeddings.py  test_error_handler.py  test_extended_dewey.py  test_firefox_bookmarks.py  test_fuzzy_search.py  test_holod.py  test_link_status_checker_plugin.py  test_migrations.py  test_normalization.py  test_papers_database.py  test_pdf_extraction.py  test_plugin_system.py  test_rate_limiter.py  test_retry_queue.py  test_sanitizer.py  test_storage.py  test_telegram_bot_plugin.py
