[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holocene"
version = "0.1.0"
description = "Your personal geological record of the present - activity tracking and AI assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Arthur", email = "endar@users.noreply.github.com"}
]
keywords = ["productivity", "tracking", "llm", "assistant", "adhd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (always installed)
dependencies = [
    "click>=8.1.0",           # CLI framework
    "pydantic>=2.0.0",        # Data validation
    "pyyaml>=6.0",            # Config files
    "python-dotenv>=1.0.0",   # Environment variables
    "rich>=13.0.0",           # Terminal formatting
    "requests>=2.31.0",       # HTTP client (used by many integrations)
]

[project.optional-dependencies]
# Holod daemon with REST API
daemon = [
    "flask>=3.0.0",           # REST API server
    "aiohttp>=3.9.0",         # Async HTTP for LLM calls
]

# PDF processing (books, papers)
pdf = [
    "pypdf>=3.17.0",          # PDF parsing
    "pdfplumber>=0.10.0",     # PDF text extraction
    "pytesseract>=0.3.10",    # OCR
    "Pillow>=10.0.0",         # Image processing
    "bibtexparser>=1.4.0",    # BibTeX parsing (2.0 not released yet)
]

# MercadoLivre integration (scraping, favorites)
mercadolivre = [
    "beautifulsoup4>=4.12.0", # HTML parsing
]

# Telegram bot (mobile notifications)
telegram = [
    "python-telegram-bot>=20.0",  # Telegram API
]

# Paperang thermal printer
paperang = [
    "pyusb>=1.2.1",           # USB communication
    "Pillow>=10.0.0",         # Image processing (shared with pdf)
    "numpy>=1.24.0",          # Array operations for image rendering
]

# All optional features (for full installation)
all = [
    "holocene[daemon]",
    "holocene[pdf]",
    "holocene[mercadolivre]",
    "holocene[telegram]",
    "holocene[paperang]",
    "holocene[research]",
    "holocene[integrations]",
    "holocene[monitoring]",
]

# Research features (embeddings, advanced search)
research = [
    "chromadb>=0.4.0",        # Vector database for embeddings
]

# External integrations
integrations = [
    "apify-client>=1.7.0",    # Apify web scraping
    "urllib3>=2.0.0",         # HTTP client (explicit)
]

# Monitoring integrations (Uptime Kuma)
monitoring = [
    "uptime-kuma-api>=1.2.0", # Uptime Kuma Socket.IO API
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
holo = "holocene.cli.main:cli"

[tool.setuptools]
packages = ["holocene"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
